[gd_scene load_steps=22 format=3 uid="uid://cnjas8okalti"]

[ext_resource type="Script" path="res://MainMap/main_map.gd" id="1_p2mt1"]
[ext_resource type="Script" path="res://MainMap/CurrentLevel.gd" id="2_ysdqk"]
[ext_resource type="Texture2D" uid="uid://dcqg42fhq7rax" path="res://assets/ui/ulli_art/linhas.png" id="3_tadmi"]
[ext_resource type="Texture2D" uid="uid://ix6tclpvja2d" path="res://assets/ui/ulli_art/selos.png" id="4_io8hu"]
[ext_resource type="PackedScene" uid="uid://7rn67sngemns" path="res://spawn_point.tscn" id="4_ux1ep"]
[ext_resource type="PackedScene" uid="uid://dnhbcsbhivh84" path="res://levels/level_1/level_1.tscn" id="5_eg8ef"]
[ext_resource type="Texture2D" uid="uid://ch20vhbhdpcnv" path="res://assets/Postcard/FASE1.png" id="6_0e7vb"]
[ext_resource type="PackedScene" uid="uid://m8s2d1gtnsak" path="res://Utils/LevelPreviewer/level_previewer.tscn" id="6_63tjb"]
[ext_resource type="PackedScene" uid="uid://c0v3m48f2fqrr" path="res://levels/level_2/level2.tscn" id="8_d43rf"]
[ext_resource type="Texture2D" uid="uid://rwr6oym0xnwh" path="res://assets/Postcard/FASE2.png" id="9_5j7s6"]
[ext_resource type="PackedScene" uid="uid://cpw1rw0wregf1" path="res://levels/level_3/level3.tscn" id="9_47my5"]
[ext_resource type="PackedScene" uid="uid://ce2kdkha7w27" path="res://levels/level_4/level_4.tscn" id="10_d6yno"]
[ext_resource type="Texture2D" uid="uid://drv5tlhx0d8bu" path="res://assets/Postcard/FASE3.png" id="11_bqwnj"]
[ext_resource type="PackedScene" uid="uid://djki15p1v1dx5" path="res://levels/level_6/level_6.tscn" id="11_vqhc4"]
[ext_resource type="Texture2D" uid="uid://dyc6rxag1472h" path="res://assets/Postcard/FASE7.png" id="13_cm6hi"]

[sub_resource type="Animation" id="Animation_lmye6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapLevels:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Postcard/Linhas:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Postcard/Selos:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MapLevels:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Postcard:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpawnPoints:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qgdyl"]
resource_name = "first_load"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapLevels:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_animation"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Postcard/Linhas:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Postcard/Selos:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MapLevels:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Postcard:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SpawnPoints:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_86efr"]
resource_name = "normal_load"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MapLevels:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_animation"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Postcard/Linhas:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Postcard/Selos:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MapLevels:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Postcard:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SpawnPoints:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kb85x"]
_data = {
"RESET": SubResource("Animation_lmye6"),
"first_load": SubResource("Animation_qgdyl"),
"normal_load": SubResource("Animation_86efr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2pgp"]
size = Vector2(10, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gq6jg"]
size = Vector2(48, 8)

[node name="MainMap" type="Node2D"]
script = ExtResource("1_p2mt1")

[node name="CurrentLevel" type="Node2D" parent="."]
script = ExtResource("2_ysdqk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kb85x")
}

[node name="MapLevels" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="MapLevels"]
offset_left = 64.0
offset_top = 80.0
offset_right = 112.0
offset_bottom = 128.0
color = Color(0.305882, 0.368627, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="MapLevels"]
offset_left = 112.0
offset_top = 96.0
offset_right = 448.0
offset_bottom = 112.0
color = Color(0.605274, 0.605274, 0.605274, 1)

[node name="ColorRect3" type="ColorRect" parent="MapLevels"]
offset_left = 448.0
offset_top = 80.0
offset_right = 496.0
offset_bottom = 128.0
color = Color(0.305882, 0.368627, 1, 1)

[node name="ColorRect4" type="ColorRect" parent="MapLevels"]
offset_left = 464.0
offset_top = 128.0
offset_right = 480.0
offset_bottom = 384.0
color = Color(0.605274, 0.605274, 0.605274, 1)

[node name="ColorRect5" type="ColorRect" parent="MapLevels"]
offset_left = 448.0
offset_top = 384.0
offset_right = 496.0
offset_bottom = 432.0
color = Color(0.305882, 0.368627, 1, 1)

[node name="ColorRect6" type="ColorRect" parent="MapLevels"]
offset_left = 264.0
offset_top = 400.0
offset_right = 448.0
offset_bottom = 416.0
color = Color(0.605274, 0.605274, 0.605274, 1)

[node name="ColorRect7" type="ColorRect" parent="MapLevels"]
offset_left = 216.0
offset_top = 384.0
offset_right = 264.0
offset_bottom = 432.0
color = Color(0.305882, 0.368627, 1, 1)

[node name="ColorRect8" type="ColorRect" parent="MapLevels"]
offset_left = 232.0
offset_top = 256.0
offset_right = 248.0
offset_bottom = 384.0
color = Color(0.605274, 0.605274, 0.605274, 1)

[node name="ColorRect9" type="ColorRect" parent="MapLevels"]
offset_left = 216.0
offset_top = 208.0
offset_right = 264.0
offset_bottom = 256.0
color = Color(0.305882, 0.368627, 1, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="MapLevels"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapLevels/StaticBody2D"]
polygon = PackedVector2Array(80, 104, 92, 96, 472, 96, 480, 104, 480, 408, 472, 416, 240, 416, 232, 408, 232, 208, 248, 208, 248, 384, 264, 400, 447.162, 400, 464, 384.419, 464, 127.914, 456, 120, 447.894, 112, 112, 112, 96, 128, 448, 128, 448, 384, 264, 384, 264, 192, 216, 192, 216, 432, 496, 432, 496, 80, 72, 80, 72, 312, 104, 312, 104, 128, 96, 128, 96, 304, 80, 304)

[node name="ColorRect10" type="ColorRect" parent="MapLevels"]
offset_left = 80.0
offset_top = 128.0
offset_right = 96.0
offset_bottom = 304.0
color = Color(0.605274, 0.605274, 0.605274, 1)

[node name="Postcard" type="Node2D" parent="."]

[node name="Linhas" type="Sprite2D" parent="Postcard"]
modulate = Color(1, 1, 1, 0)
position = Vector2(872, 376)
scale = Vector2(0.358988, 0.257165)
texture = ExtResource("3_tadmi")

[node name="Selos" type="Sprite2D" parent="Postcard"]
modulate = Color(1, 1, 1, 0)
position = Vector2(864, 144)
scale = Vector2(0.309231, 0.310909)
texture = ExtResource("4_io8hu")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint0" parent="SpawnPoints" instance=ExtResource("4_ux1ep")]
position = Vector2(88, 280)

[node name="SpawnPoint1" parent="SpawnPoints" instance=ExtResource("4_ux1ep")]

[node name="Selo" type="Sprite2D" parent="SpawnPoints/SpawnPoint1"]
visible = false
position = Vector2(16, -9.53674e-07)
scale = Vector2(0.19128, 0.19128)
texture = ExtResource("6_0e7vb")

[node name="LevelPreviewer" parent="SpawnPoints/SpawnPoint1" instance=ExtResource("6_63tjb")]
level = ExtResource("5_eg8ef")
title = "Introdução"
text = ""

[node name="StaticBody2D" type="StaticBody2D" parent="SpawnPoints/SpawnPoint1/LevelPreviewer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint1/LevelPreviewer/StaticBody2D"]
position = Vector2(52, 0)
shape = SubResource("RectangleShape2D_h2pgp")

[node name="SpawnPoint2" parent="SpawnPoints" instance=ExtResource("4_ux1ep")]
position = Vector2(472, 104)

[node name="Selo" type="Sprite2D" parent="SpawnPoints/SpawnPoint2"]
visible = false
position = Vector2(16, -9.61125e-07)
scale = Vector2(0.221119, 0.221119)
texture = ExtResource("9_5j7s6")

[node name="LevelPreviewer" parent="SpawnPoints/SpawnPoint2" instance=ExtResource("6_63tjb")]
level = ExtResource("8_d43rf")
title = "Princípios do SUS"
text = "Aprenda sobre os princípios básicos do SUS e seus principais pilares!"

[node name="StaticBody2D" type="StaticBody2D" parent="SpawnPoints/SpawnPoint2/LevelPreviewer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint2/LevelPreviewer/StaticBody2D"]
position = Vector2(0, 44)
shape = SubResource("RectangleShape2D_gq6jg")

[node name="SpawnPoint3" parent="SpawnPoints" instance=ExtResource("4_ux1ep")]
position = Vector2(472, 408)

[node name="Selo" type="Sprite2D" parent="SpawnPoints/SpawnPoint3"]
visible = false
position = Vector2(7.51019e-06, 4.29153e-06)
scale = Vector2(0.136521, 0.136521)
texture = ExtResource("11_bqwnj")

[node name="LevelPreviewer" parent="SpawnPoints/SpawnPoint3" instance=ExtResource("6_63tjb")]
level = ExtResource("9_47my5")
title = "Um sus só pra mim"
text = "Aprenda como o SUS surge e como iniciar seu atendimento!"

[node name="StaticBody2D" type="StaticBody2D" parent="SpawnPoints/SpawnPoint3/LevelPreviewer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint3/LevelPreviewer/StaticBody2D"]
position = Vector2(-48, 0)
shape = SubResource("RectangleShape2D_h2pgp")

[node name="SpawnPoint4" parent="SpawnPoints" instance=ExtResource("4_ux1ep")]
position = Vector2(240, 408)

[node name="Selo" type="Sprite2D" parent="SpawnPoints/SpawnPoint4"]
visible = false
position = Vector2(7.68139, 2.55792)
scale = Vector2(0.197474, 0.197474)
texture = ExtResource("13_cm6hi")

[node name="LevelPreviewer" parent="SpawnPoints/SpawnPoint4" instance=ExtResource("6_63tjb")]
level = ExtResource("10_d6yno")
title = "Mão na massa"
text = "Vamos fazer uma coleta gratuita pelo SUS!"

[node name="StaticBody2D" type="StaticBody2D" parent="SpawnPoints/SpawnPoint4/LevelPreviewer"]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnPoints/SpawnPoint4/LevelPreviewer/StaticBody2D"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_gq6jg")

[node name="SpawnPoint5" parent="SpawnPoints" instance=ExtResource("4_ux1ep")]
position = Vector2(240, 224)

[node name="Selo" type="Sprite2D" parent="SpawnPoints/SpawnPoint5"]
visible = false
position = Vector2(16, 8)
scale = Vector2(0.166376, 0.166376)
texture = ExtResource("6_0e7vb")

[node name="LevelPreviewer" parent="SpawnPoints/SpawnPoint5" instance=ExtResource("6_63tjb")]
level = ExtResource("11_vqhc4")
title = "Fim de jogo!"
text = "Obrigado por jogar!"

[node name="StaticBody2D" type="StaticBody2D" parent="SpawnPoints/SpawnPoint5/LevelPreviewer"]

[connection signal="return_to_map" from="CurrentLevel" to="." method="_on_current_level_return_to_map"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint1/LevelPreviewer" to="." method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint1/LevelPreviewer" to="SpawnPoints/SpawnPoint1" method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint2/LevelPreviewer" to="." method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint2/LevelPreviewer" to="SpawnPoints/SpawnPoint2" method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint3/LevelPreviewer" to="." method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint3/LevelPreviewer" to="SpawnPoints/SpawnPoint3" method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint4/LevelPreviewer" to="." method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint4/LevelPreviewer" to="SpawnPoints/SpawnPoint4" method="_on_level_previewer_start_level"]
[connection signal="start_level" from="SpawnPoints/SpawnPoint5/LevelPreviewer" to="." method="_on_level_previewer_start_level"]
